# pomodoro

./: .gitignore  .gitmodules  .ninja_deps  .ninja_log  CMakeLists.txt  Makefile  README.md  avr.cmake  cross.txt  meson.build  mesontest.build  posix.cmake  project.yml  }
.clangd/index/: main.c.96E0BB7D7349B64E.idx
.reqs/Led/: .doorstop.yml  Led001.yml  Led002.yml  Led003.yml
Diagrama/: Diagrama1.dia  Diagrama1.dia~  pomodoro.dia  useCases.dia  useCases.dia~
Kicad/Pomodoro/: Pomodoro-cache.lib  Pomodoro-rescue.lib  Pomodoro.bak  Pomodoro.kicad_pcb  Pomodoro.kicad_pcb-bak  Pomodoro.kicad_prl  Pomodoro.kicad_pro  Pomodoro.kicad_sch  Pomodoro.net  Pomodoro.pro  Pomodoro.sch  Pomodoro.sch-bak  Pomodoro.xml  _autosave-Pomodoro.sch  sym-lib-table
Kicad/Pomodoro/pomodoro/: Pomodoro-B_Cu.gbl  Pomodoro-B_Cu.gbr  Pomodoro-B_Mask.gbr  Pomodoro-B_Mask.gbs  Pomodoro-B_Paste.gbp  Pomodoro-B_Paste.gbr  Pomodoro-B_Silkscreen.gbo  Pomodoro-B_Silkscreen.gbr  (+14 more)
apps/: CMakeLists.txt  main.c  main.cpp
avr/: CMakeLists.txt  bsp.cpp  bsp.hpp  button.c  button.h  buzzer.c  buzzer.h  led.c  led.h  main.c  main.cpp  powermode.c  powermode.h  tick.c  tick.h
buildAvr/: CMakeCache.txt  CMakeLists.txt  Makefile  Pomodoro.elf  Pomodoro.hex  cmake_install.cmake
buildTest/: CMakeCache.txt  CMakeLists.txt
ch32v003/: CMakeLists.txt  button.c  button.h  buzzer.c  buzzer.h  led.c  led.h  main.c  powermode.c  powermode.h  tick.c
cmake/: avr.cmake  ch32v003.cmake  linux.cmake
doc/: Button.html  Buzzer.html  Doxyfile  Play.html  Pomodoro.html  Poweroff.html  index.html  traceability.csv
doc/html/: annotated.html  bug.html  buzzer_8h.html  buzzer_8h_source.html  classes.html  delay_8c.html  delay_8h.html  delay_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  drivers_8h.html  drivers_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  index.html  log_8h.html  log_8h_source.html  main_8c.html  menudata.js  pages.html  pomodoro_8h.html  pomodoro_8h_source.html  structpomodoro-members.html  structpomodoro.html
doc/latex/: annotated.tex  bug.tex  buzzer_8h.tex  delay_8c.tex  delay_8h.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  drivers_8h.tex  files.tex  index.tex  log_8h.tex  main_8c.tex  pomodoro_8h.tex  refman.tex  structpomodoro.tex
doc/spec/: spec.aux  spec.tex
doc/stories/: firstrun
linux/: CMakeLists.txt  button.c  buzzer.c  led.c  main.c  powermode.c
reqs/: .doorstop.yml  HIGH001.yml  HIGH002.yml  HIGH003.yml  HIGH004.yml  HIGH005.yml  Pomodoro006.yml  Pomodoro007.yml  Pomodoro008.yml  Pomodoro009.yml  Pomodoro010.yml  Pomodoro011.yml  Pomodoro012.yml  Pomodoro013.yml  Pomodoro014.yml  Pomodoro015.yml  Pomodoro016.yml
reqs/Button/: .doorstop.yml  Button001.yml  Button002.yml  Button003.yml  Button004.yml  Button005.yml
reqs/Buzzer/: .doorstop.yml  Buzzer001.yml  Buzzer002.yml
reqs/EventHandler/: .doorstop.yml  EventHandler001.yml  EventHandler002.yml  EventHandler003.yml
reqs/Issues/: .doorstop.yml  Issues001.yml  Issues002.yml
reqs/Pause/: .doorstop.yml
reqs/Play/: .doorstop.yml  Play001.yml  Play002.yml  Play003.yml  Play004.yml  Play005.yml
reqs/Poweroff/: .doorstop.yml  Poweroff001.yml  Poweroff002.yml  Poweroff003.yml
reqs/button/: .doorstop.yml  BUTTON001.yml  BUTTON002.yml  BUTTON003.yml  BUTTON004.yml  BUTTON005.yml  REQ010.yml  REQ013.yml  REQ014.yml
reqs/buzzer/: .doorstop.yml
reqs/led/: .doorstop.yml
reqs/req/: REQ001.yml  REQ002.yml  REQ003.yml  REQ004.yml  REQ005.yml  REQ006.yml  REQ007.yml  REQ008.yml  REQ009.yml  REQ010.yml  REQ011.yml  REQ012.yml  REQ013.yml  REQ015.yml
schem/: pomodoro.cmd  pomodoro.net  pomodoro.pcb  pomodoro.ps  pomodoro.sch  pomodoro.sch~
src/: CMakeLists.txt  Makefile  a.elf  action.c  action.h  apagar.c  apagar.h  async_button.c  async_button.h  blinker.c  blinker.h  blinker.su  bsp.cpp  bsp.hpp  button.c  button.cpp  button.h  button.hpp  button.su  buttonController.c  buttonController.h  button_driver.c  button_driver.h  buzzer.c  buzzer.cpp  buzzer.h  buzzer.hpp  buzzer.su  buzzerController.c  buzzerController.h  buzzerController.su  circular_buffer.cpp  circular_buffer.hpp  controller.c  controller.cpp  controller.h  controller.hpp  controller.su  cstdint  delay.c  (+82 more)
src/build-uno/: buzzer.c.d  event_input.c.d  handleLed.c.d  led.c.d  main.c.d  millis.c.d  pomodoro.c.d  pomodoro_pause.c.d  pomodoro_run.c.d  pomodoro_sessions.c.d
src/hal/: bsp.hpp  bsp_posix.cpp  button.h  buzzer.h  buzzer_posix.c  hal.h  led.h  led_posix.c  powermode.c  powermode.h  tick.h
src/services/: blinking.cpp  blinking.hpp  button.hpp  buzzing.cpp  buzzing.hpp  power.hpp
src/tasks/: input.c  input.h  pomodoro.c  pomodoro.h  rebound.cpp  rebound.hpp
test/: est_action.c  est_pomodoro.c  spy_buzzer.c  spy_buzzer.h  spy_delay.c  spy_delay.h  spy_led.c  spy_led.h  spy_poweroff.c  spy_poweroff.h  spy_time.c  spy_time.h  stub_interrupt.h  test_action.c  test_apagar.c  test_async_button.c  test_blinker-led.c  test_blinker-time.c  test_blinker.c  test_button.c  test_buttonController.c  test_button_driver.c  test_buzzer.c  test_buzzerController.c  test_controller-selector.c  test_controller.c  test_delay.c  test_entrada.c  test_event_input.c  test_gpioHandler.c  test_handleLed.c  test_input_case.c  test_led.c  test_ledController.c  test_main.c  test_millis.c  test_pause.c  test_play.c  test_pomodoro.c  test_pomodoro_pause.c  (+13 more)
test/avr/: interrupt.c  interrupt.h  io.c  io.h  sleep.h  stub_interrupt.c  stub_interrupt.h
test/spys/: button_spy.c  button_spy.h  buzzer_spy.c  buzzer_spy.h  controller_spy.c  controller_spy.h  led_spy.c  led_spy.h  millis_spy.c  millis_spy.h  pause_spy.c  pause_spy.h  play_spy.c  play_spy.h  presenter_spy.c  presenter_spy.h  progress_spy.c  progress_spy.h  selector_spy.c  selector_spy.h  spy_button.c  spy_button.h  time_spy.h  timer_spy.c  timer_spy.h
test/support/: stub_interrupt.h  stub_io.c  stub_io.h  stub_sleep.h
tests/: CMakeLists.txt  test_button.cpp  test_buzzer.cpp  test_input.cpp  test_pomodoro.cpp  test_tickOneSecond.cpp
(+27 files in other folders)
